monticore-generator/src/test/resources/cocos/valid/Overriding2.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.valid;

grammar Overriding2 extends mc.grammars.types.TestTypes {


  QualifiedName;

  // Override mc.literals.Literals
      interface Literal extends Expression;

      Expression;



}
