monticore-generator/src/test/resources/cocos/invalid/A2116/A2116c.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2116;

grammar A2116c {
  A;

  interface B extends A;

}
